--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "testing graphql server",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index",
     "test": "test"
   },
   "repository": {
@@ -21,8 +22,14 @@
     "url": "https://github.com/wcelery/graphql-playground/issues"
   },
   "homepage": "https://github.com/wcelery/graphql-playground#readme",
+  "type": "module",
   "dependencies": {
+    "apollo-datasource-rest": "^0.9.7",
     "apollo-server": "^2.19.2",
     "graphql": "^15.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7"
   }
 }
